fix btn position on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -57,7 +57,7 @@ $salmon-color: #ff6563;
     }
     .btn-wrapper {
       position: absolute;
-      bottom: 2%;
+      bottom: 7%;
       left: 0;
       right: 0;
       .btn {
